<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Droid Desserts"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription="TODO"
            app:civ_border_color="@color/white"
            android:onClick="Donut"
            android:src="@drawable/donut" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/donut"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:civ_border_color="@color/white"
            android:onClick="IceCream"
            android:src="@drawable/ice" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/iceCream"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription="TODO"
            app:civ_border_color="@color/white"
            android:onClick="Froyo"
            android:src="@drawable/froyo" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/froyo"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_gravity="end"
        android:onClick="call"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_baseline_shopping_cart_24"
        android:clickable="true">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</LinearLayout>